Admin navbar is now accessible b/c of z-index issue. Registrations and sessions are better.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,8 +29,8 @@ html, body {
   min-height: 100%;
 }
 
-.header-bg {
-
+.admin-navbar {
+  z-index: 10000;
 }
 
 #main {
